# hydro_replace

./: .gitignore  DATA_PRODUCTS.md  OVERNIGHT_PLAN.md  PROJECT_STATUS.md  README.md  draft.tex  environment.yml  missing_data_report.json  missing_lensplane_tasks.json  missing_planes_by_snap.json  pipeline_jobs.txt  pyproject.toml  recovery_master.sh  setup.py  todo.md
.github/: copilot-instructions.md
archive/: README.md  copilot-instructions.md
batch/: 01_prepare_data.sh  02_extract_particles.sh  06_compute_power.sh  README.md  run_all_lensplanes.sh  run_all_matches.sh  run_all_modes.sh  run_baryonic_response.sh  run_bcm_2500_array.sh  run_bcm_625_array.sh  run_bcm_625_lensplanes.sh  run_density_response.sh  run_full_pipeline.sh  run_halo_statistics.sh  run_kappa_response.sh  run_kappa_response_kappabins.sh  run_kappa_response_kappabins_allz.sh  run_lensplane_recovery.sh  run_lensplanes_all.sh  run_lp_check_rerun.sh  run_lux_convert_recovery.sh  run_lux_missing.sh  run_lux_pipeline_array.sh  run_maps_bcm_missing.sh  run_maps_pending.sh  run_pipeline_1250_array.sh  run_pipeline_1250_lensplanes.sh  run_pipeline_1250_maps_only.sh  run_pipeline_2500_array.sh  run_pipeline_625.sh  run_pipeline_625_array.sh  run_pipeline_625_full.sh  run_pipeline_625_lensplanes.sh  run_profiles_bcm.sh  run_profiles_fast.sh  run_profiles_mpi.sh  run_raytracing_pipeline.sh  run_rt_recovery.sh  run_unified_2500_array.sh  run_unified_2500_missing.sh  (+8 more)
config/: analysis_params.yaml  bcm_params.yaml  raytrace_config.yaml  simulation_paths.yaml  snapshot_list.yaml
docs/: DATA_RECOVERY_PLAN.md  PARTICLE_ACCESS_DESIGN.md  efficient_path.md  full_pipeline.md  pipeline_computations.md  technical_architecture.md  unified_lensplane_pipeline.md
notebooks/: 00_pipeline_monitor.ipynb  01_validate_matches.ipynb  02_validate_maps.ipynb  03_validate_profiles.ipynb  04_validate_lensplanes.ipynb  05_validate_raytracing.ipynb  06_visualize_density_response.ipynb  07_publication_figures.ipynb  08_kappa_statistics_analysis.ipynb  08_kappa_statistics_analysis_kappabins.ipynb  Untitled.ipynb  analyze_results.ipynb  baryonic-response-equations.md  baryonic_response.py  diagnose_data_loading.py  (+16 more)
(+141 files in other folders)
